2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1873328:
    * source/org/jfree/chart/util/RelativeDateFormat.java
    (showZeroHours): New field,
    (positivePrefix): Likewise,
    (RelativeDateFormat(long)): Initialise new fields,
    (getShowZeroHours): New method,
    (setShowZeroHours): Likewise,
    (getPositivePrefix): Likewise,
    (setPositivePrefix): Likewise,
    (format): Apply positive prefix, and fix formatting for negative values,
    (equals): Handle new fields,
    (hashCode): Use positivePrefix.

2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1873160:
    * source/org/jfree/chart/plot/DialPlot.java
    (draw): Fix clipping issues.
    
2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1892419:
    * source/org/jfree/chart/axis/LogAxis.java
    (LogAxis(String)): Change default number of minor ticks.
    
2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1874890 (Ulrich Voigt with contributions from Martin Hoeller):
    * source/org/jfree/chart/renderer/xy/XYStepRenderer.java
    (stepPoint): New field,
    (getStepPoint): New method,
    (setStepPoint): Likewise,
    (drawItem): Calculate step point using new field,
    (drawLine): New private method,
    (equals): New method override,
    (hashCode): Likewise.

2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Includes patches 1866446 and 1888422 from Rob Van der Sanden:
    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (maximumBarWidth): New field,
    (BoxAndWhiskerRenderer): Initialise maximumBarWidth,
    (setArtifactPaint): Simplify event firing,
    (setFillBox): Likewise,
    (setItemMargin): Likewise,
    (getMaximumBarWidth): New method,
    (setMaximumBarWidth): Likewise,
    (initialise): Use new maximumBarWidth attribute,
    (drawHorizontalItem): Use correct data area dimension, and check for
    visibility of average marker,